--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ github_username:  RaphaelTeo
 
 # Build settings
 markdown: kramdown
-theme: minimatheme: jekyll-theme-tactile
+theme: jekyll-theme-tactile
