--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # basic options
-title: Welcome to my digital portfolio
-author: Raphael Teo
-email: your-email@domain.com
-description: A collection of projects by Raphael Teo
-github_username:  RaphaelTeo
+# title: Welcome to my digital portfolio
+#author: Raphael Teo
+#email: your-email@domain.com
+#description: A collection of projects by Raphael Teo
+#github_username:  RaphaelTeo
 
 # Build settings
 markdown: kramdown
